--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -5,11 +5,17 @@
   flex-direction: column;
   min-height: 100%;
   background: #f0f2f5;
+  padding: 100px 20px 0px;
+  .footer{
+    padding: 0!important;
+    margin: 0!important;
+  }
 }
 
 .content {
-  padding: 32px 0;
+  // padding: 32px 0;
   flex: 1;
+  margin: 0px auto;
 }
 
 @media (min-width: @screen-md-min) {
@@ -21,7 +27,8 @@
   }
 
   .content {
-    padding: 112px 0 24px 0;
+    // padding: 112px 0 24px 0;
+    margin: 0px auto;
   }
 }
 
@@ -55,6 +62,5 @@
 .desc {
   font-size: @font-size-base;
   color: @text-color-secondary;
-  margin-top: 12px;
-  margin-bottom: 40px;
+  margin: 10px 0px;
 }
